added portfolio section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div class="navbar-container">
         <nav class="navbar">
             <ul class="nav logo">
                 <li class="brand"> 
@@ -50,6 +51,7 @@
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
     
     <main>
@@ -68,7 +70,7 @@
             <div class="services">
                 <p>Services</p>
                 <p class="services-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos excepturi possimust</p>
-                <a href="#">show more  &#8594;</a>
+                <a href="#" class="yellow">show more  &#10230;</a>
                 <ul class="nav">
                     <li>
                         <a href="#">
@@ -93,30 +95,86 @@
                 </ul>
             </div>
         </section>
-        <div class="social-bar">
-            <div class="s1">
-                <a href="#">
-                    <img src="./Resources/meta-social.svg" alt="">
-                </a>
+        <section class="portfolio-container" id="portfolio">
+            <div class="social-bar">
+                <div class="s1">
+                    <a href="#">
+                        <img src="./Resources/meta-social.svg" alt="">
+                    </a>
+                </div>
+                <div class="s2">
+                    <a href="#">
+                        <img src="./Resources/google-social.svg" alt="">
+                    </a>
+                </div>
+                <div class="s3">
+                    <a href="#">
+                        <img src="./Resources/linkedin-social.svg" alt="">
+                    </a>
+                </div>
+                <div class="s4">
+                    <a href="#">
+                        <img src="./Resources/slack-social.svg" alt="">
+                    </a>
+                </div>
             </div>
-            <div class="s2">
-                <a href="#">
-                    <img src="./Resources/google-social.svg" alt="">
-                </a>
+            <div class="portfolio">
+                <div class="portfolio-intro">
+                    <h2 class="name">What Can I Do For<br>Your Needs</h2>
+                    <p class="intro-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi ab, facere placeat error illum sapiente, voluptas quaerat</p>
+                    <div class="portfolio-services">
+                        <div class="info-1">
+                            <h3 class="yellow">250+</h3>
+                            <div class="intro-para">Project Completed</div>
+                        </div>
+                        <div class="info-2">
+                            <h3 class="yellow">100+</h3>
+                            <div class="intro-para">Community Network</div>
+                        </div>
+                        <div class="info-3">
+                            <h3 class="yellow">30+</h3>
+                            <div class="intro-para">Contract Remote</div>
+                        </div>
+                        <div class="info-4">
+                            <h3 class="yellow">10+</h3>
+                            <div class="intro-para">Years Experiance</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-list">
+                    <a href="#" class="lists">
+                        <img src="./Resources/ui-ux-design.jpg" alt="">
+                        <div>
+                            <h3 class="name">UI/UX Design</h3>
+                            <div class="arrow yellow">&#10230;</div>
+                            <p class="intro-para">117 Projects</p>
+                        </div>
+                    </a>
+                    <hr>
+                    <a href="#" class="lists">
+                        <div class="lists">
+                            <img src="./Resources/frontend-dev.png" alt="">
+                            <div>
+                                <h3 class="name">Front End Develop</h3>
+                                <div class="arrow yellow">&#10230;</div>
+                                <p class="intro-para">87 Projects</p>
+                            </div>
+                        </div>
+                    </a>
+                    <hr>
+                    <a href="#" class="lists">
+                        <div class="lists">
+                            <img src="./Resources/mobile-app-dev.png" alt="">
+                            <div>
+                                <h3 class="name">Mobile App Develop</h3>
+                                <div class="arrow yellow">&#10230;</div>
+                                <p class="intro-para">32 Projects</p>
+                            </div>
+                        </div>
+                    </a>
+                    <hr>
+                </div>
             </div>
-            <div class="s3">
-                <a href="#">
-                    <img src="./Resources/linkedin-social.svg" alt="">
-                </a>
-            </div>
-            <div class="s4">
-                <a href="#">
-                    <img src="./Resources/slack-social.svg" alt="">
-                </a>
-            </div>
-        </div>
-        <section class="portfolio" id="portfolio">
-            
         </section>
     </main>
 
