added portfolio section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar-container">
         <nav class="navbar">
-            <ul class="nav logo">
+            <ul class="nav">
                 <li class="brand"> 
                     <a href="./index.html">
                         <img src="./Resources/emoji.png" alt="">
@@ -72,22 +72,22 @@
                 <p class="services-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos excepturi possimust</p>
                 <a href="#" class="yellow">show more  &#10230;</a>
                 <ul class="nav">
-                    <li>
+                    <li class="logo">
                         <a href="#">
                             <img src="./Resources/facebook-services.png" alt="">
                         </a>
                     </li>
-                    <li>
+                    <li class="logo">
                         <a href="#">
                             <img src="./Resources/twitter-services.png" alt="">
                         </a>
                     </li>
-                    <li>
+                    <li class="logo">
                         <a href="#">
                             <img src="./Resources/instagram-services.png" alt="">
                         </a>
                     </li>
-                    <li>
+                    <li class="logo">
                         <a href="#">
                             <img src="./Resources/pinterest-services.png" alt="">
                         </a>
@@ -173,6 +173,64 @@
                         </div>
                     </a>
                     <hr>
+                </div>
+            </div>
+            <div class="portfolio-tiles">
+                <div class="tiles">
+                    <div class="logo"><img src="./Resources/ui-ux-tile.png" alt=""></div>
+                    <h3 class="name">UI/UX Design</h3>
+                    <p class="intro-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi ab, facere placeat error illum sapiente, voluptas quaerat</p>
+                </div>
+                <div class="tiles">
+                    <div class="logo"><img src="./Resources/front-end-tile.png" alt=""></div>
+                    <h3 class="name">Web Programming</h3>
+                    <p class="intro-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi ab, facere placeat error illum sapiente, voluptas quaerat</p>
+                </div>
+                <div class="tiles">
+                    <div class="logo"><img src="./Resources/mobile-app-tile.png" alt=""></div>
+                    <h3 class="name">Mobile Development</h3>
+                    <p class="intro-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi ab, facere placeat error illum sapiente, voluptas quaerat</p>
+                </div>
+            </div>
+            <div class="portfolio-projects">
+                <div class="projects-tiles">
+                    <p class="yellow">Mobile App Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Travel Mobile App</p>
+                    <img src="./Resources/travel-mobile-app.png" alt="">
+                </div>
+                <div class="projects-tiles">
+                    <p class="yellow">Web Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Real State Landing Page</p>
+                    <img src="./Resources/real-state.png" alt="">
+                </div>
+                <div class="projects-tiles">
+                    <p class="yellow">Web Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Coffee Shop Website</p>
+                    <img src="./Resources/coffee-shop.png" alt="">
+                </div>
+                <div class="projects-tiles">
+                    <p class="yellow">Mobile App Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Sneaker Store App</p>
+                    <img src="./Resources/sneaker-store.png" alt="">
+                </div>
+                <div class="projects-tiles">
+                    <p class="yellow">Mobile App Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Hotel Booking App</p>
+                    <img src="./Resources/hotel-booking.png" alt="">
+                </div>
+                <div class="projects-tiles">
+                    <p class="yellow">Web Design</p>
+                    <a href="#" class="yellow left">&#9993; Case Study</a>
+                    <p class="name">Coworkig Space Site</p>
+                    <img src="./Resources/coworking-space.png" alt="">
+                </div>
+                <div class="button">
+                    <button class="yellow">More Portfolio</button>
                 </div>
             </div>
         </section>
