--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <p class="intro-para">Stay connected with me on social and get to know more about my services</p>
                     <ul class="nav">
                         <li class="logo">
-                            <a href="#">
+                            <a href="https://www.facebook.com/people/Basim-Khan/pfbid0Ujmjc3Y4wnF7yvHnQ5B1YUiWgwMfcWNBChpptQJEivWWMgH7RXmaYWhFafwi7nCMl/" target="_blank">
                                 <img src="./Resources/facebook-services.png" alt="">
                             </a>
                         </li>
@@ -327,12 +327,12 @@
                             </a>
                         </li>
                         <li class="logo">
-                            <a href="#">
+                            <a href="https://www.instagram.com/basim_khann/" target="_blank">
                                 <img src="./Resources/instagram-services.png" alt="">
                             </a>
                         </li>
                         <li class="logo">
-                            <a href="#">
+                            <a href="https://www.pinterest.com/kbasim039/" target="_blank">
                                 <img src="./Resources/pinterest-services.png" alt="">
                             </a>
                         </li>
