update: added responsivenes

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
         </section>
         <section>
-            <div class="portfolio-tiles width100 margin row">
+            <div class="portfolio-tiles margin row">
                 <div class="tiles">
                     <div class="logo"><img src="./Resources/ui-ux-tile.png" alt=""></div>
                     <h3 class="name">UI/UX Design</h3>
@@ -281,7 +281,7 @@
                         <h2 class="name">Let's Hire Me And Make<br>The Best Product</h2>
                         <p class="intro-para">Contact me if you are interested in entrusting your work to me, or you can
                             check out my youtube channel to see how I work, Thanks</p>
-                        <a href="https://www.youtube.com/channel/UCN-zjNcVoGl7M6TQr2ZeKvQ" target="_blank"><button
+                        <a href="https://www.youtube.com/@sudocodewithbasim" target="_blank"><button
                                 class="yellow">Youtube</button></a>
                         <a href="mailto:kbasim039@gmail.com" target="_blank">
                             <button class="yellow">Contact Me</button></a>
